Fixing showing reports where amount of report exceeds the screen size. Maze SupplierMenu first screen won't jump if the user didn't choose supplier